# social_network_pet

./: .gitignore  LICENSE  README.md  pyproject.toml
social_network_be/: Makefile  manage.py
social_network_be/accounts/: api.py  forms.py  managers.py  models.py  urls.py
social_network_be/accounts/migrations/: 0001_initial.py  0002_alter_user_name.py
social_network_be/posts/: api.py  models.py  serializers.py  urls.py
social_network_be/posts/migrations/: 0001_initial.py
social_network_be/search/: api.py  urls.py
social_network_be/social_network_be/: asgi.py  settings.py  urls.py  wsgi.py
social_network_fe/: README.md  package-lock.json  package.json
social_network_fe/src/: App.vue
social_network_fe/src/components/: FeedItem.vue  PeopleYouMayKnow.vue  Trends.vue
social_network_fe/src/router/: index.js
social_network_fe/src/stores/: user.js
social_network_fe/src/views/: FeedView.vue  LoginView.vue  MessagesView.vue  ProfileView.vue  SearchView.vue  SignupView.vue
