[tool.poetry]
name = "social-network-pet"
version = "0.1.0"
description = ""
authors = ["Rashid Rysaev <rashid.rysaev93@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "social_network_pet"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
