[tool.poetry]
name = "social-network-pet"
version = "0.1.0"
description = ""
authors = ["Rashid Rysaev <rashid.rysaev93@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "social_network_pet"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
djangorestframework = "^3.14.0"
pillow = "^10.1.0"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.3.1"
django-environ = "^0.11.2"
ruff = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
exclude = [".env", "settings.py", "/.migrations", "/.social_network_fe"]
